--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
+
 <html lang="en">
+{%load static%}
 <head>
-    <meta charset="UTF-8">
     <title>Vireal's blog</title>
+    <link href="https://fonts.googleapis.com/css?family=Anton|Bebas+Neue|Solway|Tomorrow:400i&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <meta charset="UTF-8">
+
 </head>
 
 <body>
-    <div>
+    <div class="page-header">
         <h1><a href="/">Vireal's Blog</a></h1>
     </div>
-    <div>
+    <div class="content container">
         <h2>This is just a list of games:</h2>
-    </div>
-    {% for post in posts %}
+
+        {% for post in posts %}
+            <div class="post">
+                <h2><a href="https://en.wikipedia.org/wiki/{{post.title}}">{{post.title}}</a> </h2>
+                <h4>published: {{ post.published_date}} <a href="https://vk.com/{{post.author}}">{{post.author}}</a> </h4>
+                <p>{{post.text}}</p>
+            </div>
+        {% endfor %}
+
         <div>
-
-            <h2><a href="https://en.wikipedia.org/wiki/{{post.title}}">{{post.title}}</a> </h2>
-            <h5>published: {{ post.published_date}} <a href="https://vk.com/{{post.author}}">{{post.author}}</a> </h5>
-            <p>{{post.text}}</p>
+            <h3> You can find my <em> <strong> VK </strong></em>
+                page <a href="https://vk.com/vireal">here</a> !
+            </h3>
         </div>
-    {% endfor %}
-
-    <div>
-        <h3> You can find my <em> <strong> VK </strong></em>
-            page <a href="https://vk.com/vireal">here</a> !
-        </h3>
     </div>
 
 </body>
